--- a/createAccount.html
+++ b/createAccount.html
@@ -27,7 +27,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      opacity: 0.9; /* يمكنك تعديل شفافية الصورة هنا */
+      opacity: 0.9;
     }
   </style>
 </head>
@@ -54,7 +54,7 @@
 
   <!-- Form container -->
   <form autocomplete="off" id="signupForm" class="bg-white rounded-3xl shadow-[0_0_20px_#c7e6f3] p-8 w-[320px] sm:w-[400px] flex flex-col items-center space-y-6 relative z-10" novalidate>
-   <!-- باقي كود الفورم كما هو -->
+  
    <div class="text-[#1f4e72] text-4xl font-extrabold flex flex-col items-center space-y-2">
     <i class="fas fa-user-circle text-5xl"></i>
     <h1>Create an account</h1>
