Technical Support.html

--- a/Technical Support.html
+++ b/Technical Support.html
@@ -22,7 +22,7 @@
       width: 50%;
       height: 100%;
       object-fit: cover;
-      opacity: 0.2;
+      opacity: 0.9;
     }
   </style>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -49,12 +49,12 @@
     <!-- Background Image Layer -->
     <div class="background-container">
 
-      <img src="C:\Users\btool\Downloads\img_group_29.png" alt="Background" class="background-img">
+      <img src="img_group_19.png" alt="Background" class="background-img">
     </div>
     
     <!-- Logo -->
     <div class="absolute top-8 left-8 z-20">
-      <a href="C:\Users\btool\Downloads\grad_s_application13\Home1.html">
+      <a href="Home1.html">
         <img src="C:\Users\btool\Downloads\img_header_logo.png" class="w-32 h-auto cursor-pointer">
       </a>
     </div>
