--- a/Resultspage1p.html
+++ b/Resultspage1p.html
@@ -29,22 +29,22 @@
                 <div class="menu__row">
                   <ul class="header__nav__menu">
                     <li>
-                      <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
-                        <p class="header__nav__menu-item ui text size-texts">HOME PAGE</p>
+                      <a href="Home1.html" target="_blank">
+                        <p class="header__nav__menu-item ui text size-texts">Home Page</p>
                       </a>
                     </li>
                     <li>
-                      <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+                      <a href="Aboutus.html" target="_blank">
                         <p class="menu__item--about ui text size-texts">About us</p>
                       </a>
                     </li>
                     <li>
-                      <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+                      <a href="LoginOne.html" target="_blank">
                         <p class="menu__item--about ui text size-texts">Login</p>
                       </a>
                     </li>
                     <li>
-                      <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+                      <a href="Signin1n.html" target="_blank">
                         <p class="menu__item--about ui text size-texts">Sign up</p>
                       </a>
                     </li>
@@ -59,7 +59,7 @@
                 <div class="user-profile-1 container-xs">
                   <div class="user-profile__info">
                     <h1 class="user-profile__welcome-text ui heading size-heading4xl">Welcome User</h1>
-                    <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+                    <a href=" Home1.html    " target="_blank">
                       <div class="user-profile__details">
                         <img
                           src="public/images/img_hugeicons_co_present_light_blue_900.svg"
@@ -70,7 +70,7 @@
                       </div>
                     </a>
                   </div>
-                  <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+                  <a href="Technical.html" target="_blank">
                     <img
                       src="public/images/img_group.svg"
                       alt="Group"
