--- a/Aboutus.html
+++ b/Aboutus.html
@@ -31,27 +31,29 @@
               <header class="header-2">
                 <div class="header__top-row">
                   <div class="header__top-row__group">
+                    <a href="Home1.html">
                     <img src="public/images/img_header_logo.png" alt="Header Logo" class="header__logo" />
+                  </a>
                     <div class="header__nav">
                       <div class="header__nav__item">
                         <ul class="header__nav__menu">
                           <li>
-                            <a href="#">
+                            <a href="Home1.html">
                               <p class="header__nav__menu-item ui text size-texts">HOME PAGE</p>
                             </a>
                           </li>
                           <li>
-                            <a href="#">
+                            <a href="Aboutus.html">
                               <p class="ui text size-texts">About us</p>
                             </a>
                           </li>
                           <li>
-                            <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+                            <a href="LoginOne.html" target="_blank">
                               <p class="ui text size-texts">Login</p>
                             </a>
                           </li>
                           <li>
-                            <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+                            <a href="SigninOne.html" target="_blank">
                               <p class="ui text size-texts">Sign up</p>
                             </a>
                           </li>
@@ -60,7 +62,7 @@
                     </div>
                   </div>
                 </div>
-                <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+                <a href="Technical.html" target="_blank">
                   <img src="public/images/img_group.svg" alt="Group" class="header__banner" />
                 </a>
               </header>
@@ -78,7 +80,7 @@
                   <div class="about-us-section__column">
                     <h2 class="section__title ui heading size-heading5xl">Who Are we?</h2>
                     <h3 class="about-us-section__description ui heading size-textxl">
-                      We are a team of passionate students dedicated to developing<br />Innovative technological
+                      We are a team of passionate students dedicated to developing<br/>Innovative technological
                       solutions in the healthcare field. Our team integrates artificial intelligence and Natural
                       language processing (NLP) technologies to facilitate medical research.
                     </h3>
@@ -88,8 +90,10 @@
                 <!-- vision section -->
                 <div class="about-us-section container-sm">
                   <div class="about-us-section__column">
-                    <h4 class="section__title ui heading size-heading5xl">Our</h4>
-                    <h5 class="about-us-section__description ui heading size-textxl">Vision</h5>
+                    <h4 class="section__title ui heading size-heading5xl">Our Vision</h4>
+                    <h5 class="about-us-section__description ui heading size-textxl">We aim to accelerate the analysis of medical research<br />and reduce the time required
+                      for professionals to extract <br />Essential information. This contributes to enhancing
+                      the quality of healthcare And enabling evidence-based decision-making.</h5>
                   </div>
                 </div>
               </div>
