--- a/Home1.html
+++ b/Home1.html
@@ -28,27 +28,29 @@
         <header class="header">
           <div class="header__top-row">
             <div class="header__top-row__group">
+              <a href="Home1.html">
               <img src="public/images/img_header_logo.png" alt="Header Logo" class="header__logo" />
+            </a>
               <div class="header__nav">
                 <div class="header__nav__item">
                   <ul class="header__nav__menu">
                     <li>
-                      <a href="#">
+                      <a href="Home1.html">
                         <p class="header__nav__menu-item ui text size-texts">HOME PAGE</p>
                       </a>
                     </li>
                     <li>
-                      <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+                      <a href="Aboutus.html" target="_blank">
                         <p class="ui text size-texts">About us</p>
                       </a>
                     </li>
                     <li>
-                      <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+                      <a href="LoginOne.html" target="_blank">
                         <p class="ui text size-texts">Login</p>
                       </a>
                     </li>
                     <li>
-                      <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+                      <a href="SigninOne.html" target="_blank">
                         <p class="ui text size-texts">Sign up</p>
                       </a>
                     </li>
@@ -57,7 +59,7 @@
               </div>
             </div>
           </div>
-          <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
+          <a href="Technical.html" target="_blank">
             <img src="public/images/img_group.svg" alt="Group" class="header__banner" />
           </a>
         </header>
