--- a/Signup.html
+++ b/Signup.html
@@ -27,7 +27,7 @@
                     <div class="header__nav__item">
                       <ul class="header__nav__menu">
                         <li>
-                          <a href="file:///C:/Users/btool/Downloads/intellmed/Home1.html" target="_blank">
+                          <a href="Home1.html" target="_blank">
                             <p class="header__nav__menu-item ui text size-texts">Home Page</p>
                           </a>
                         </li>
