--- a/ProfileWorks.html
+++ b/ProfileWorks.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>User Profile - Manage Personal Information and Works</title>
+    <title>File History - Review Your Past File Records</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Access and update your personal information, view previous works, and manage your account settings. Keep your professional profile up-to-date with ease."
+      content="Browse your previous file records with no files currently available. Remember, files are kept for 30 days for your convenience and security."
     />
     <img
       alt="Logo"
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
   </head>
   <body>
-    <!-- main container section -->
+    <!-- main layout section -->
     <div class="profileworks">
       <div class="profile-works container-md">
         <!-- footer section -->
@@ -33,22 +33,22 @@
                       <div class="header__nav__item">
                         <ul class="header__nav__menu">
                           <li>
-                            <a href="#">
+                            <a href="Home1.html">
                               <p class="header__nav__menu-item ui text size-texts">HOME PAGE</p>
                             </a>
                           </li>
                           <li>
-                            <a href="#">
+                            <a href="Aboutus.html">
                               <p class="ui text size-texts">About us</p>
                             </a>
                           </li>
                           <li>
-                            <a href="#">
+                            <a href="LoginOne.html">
                               <p class="ui text size-texts">Login</p>
                             </a>
                           </li>
                           <li>
-                            <a href="#">
+                            <a href="Signup.html">
                               <p class="ui text size-texts">Sign up</p>
                             </a>
                           </li>
@@ -57,72 +57,48 @@
                     </div>
                   </div>
                 </div>
-                <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
-                  <img src="public/images/img_group_cyan_400_01.svg" alt="Group" class="header__banner" />
+                <a href="Technical.html">
+                  <img src="public/images/img_group.svg" alt="Group" class="header__banner" />
                 </a>
               </header>
 
-              <!-- profile section -->
+              <!-- content section -->
               <div class="sidebar__main">
-                <img src="public/images/img_group_65.svg" alt="Group 65" class="sidebar__avatar" />
-                <div class="sidebar__info">
-                  <div class="info__navigation">
+                <img src="public/images/img_group_65_white_a700_01.svg" alt="Group 65" class="sidebar__avatar" />
+                <div class="main__details">
+                  <div class="details__personal">
                     <img
-                      src="public/images/img_hugeicons_co_present.svg"
+                      src="public/images/img_hugeicons_co_present_light_blue_900.svg"
                       alt="Hugeicons Co Present"
-                      class="navigation__icon"
+                      class="personal__icon"
                     />
-                    <div class="navigation__buttons">
-                      <button class="button--personal ui button blue_gray_500 size-3xl fill">
-                        Personal information
+                    <div class="personal__actions">
+                      <div class="actions__title">
+                        <button class="title__text ui heading size-heading2xl"
+                        onclick="window.open('ProfileWorks.html', '_blank')">Personal information</button>
+                      </div>
+                      <button class="actions__button--previous-works ui button blue_gray_500 size-3xl fill"
+                      onclick="window.open('ProfileWorksOne.html', '_blank')">
+                        Previous works
                       </button>
-                      <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
-                        <button class="button--works ui button blue_gray_500 size-3xl fill">Previous works</button>
-                      </a>
-                      <a href="https://www.youtube.com/embed/bv8Fxk0sz7I" target="_blank">
-                        <button class="button--works ui button blue_gray_500 size-3xl fill">Log out</button>
-                      </a>
+                      <button class="actions__button--previous-works ui button blue_gray_500 size-3xl fill"
+                      onclick="window.open('ProfileWorksTwo1.html', '_blank')">
+                        Log out
+                      </button>
                     </div>
                   </div>
-                  <div class="info__details">
-                    <div class="details__name">
-                      <h1 class="name__label ui heading size-textxl">Name:</h1>
-                      <label class="name__input ui input white_a700_fc size-xs fill">
-                        <input name="Rectangle 56" type="text" />
-                      </label>
+                  <div class="details__records">
+                    <h2 class="content__welcome-text ui heading size-text2xl">Previous file record</h2>
+                    <div class="records__note-container">
+                      <p class="note-container__text ui text size-textmd">There are no files</p>
                     </div>
-                    <div class="details__id">
-                      <h2 class="content__welcome-text ui heading size-textxl">ID:</h2>
-                      <label class="name__input ui input white_a700_fc size-xs fill">
-                        <input name="Rectangle 56" type="text" />
-                      </label>
-                    </div>
-                    <div class="details__id">
-                      <h3 class="content__welcome-text ui heading size-textxl">Email:</h3>
-                      <label class="email__input ui input white_a700_fc size-xs fill">
-                        <input name="Rectangle 56" type="text" />
-                      </label>
-                    </div>
-                    <div class="details__password">
-                      <h4 class="content__welcome-text ui heading size-textxl">Password:</h4>
-                      <label class="password__input ui input white_a700_fc size-xs fill">
-                        <input name="Rectangle 56" type="text" />
-                      </label>
-                    </div>
-                    <button class="info__save-button ui button teal_900 size-lg fill round">
-                      <img
-                        src="public/images/img_hugeiconssystemupdate01.svg"
-                        alt="Hugeicons:system-update-01"
-                        class="hugeiconssystem-update-01"
-                      />
-                      <span> Save changes</span>
-                    </button>
+                    <p class="records__note ui text size-textlg">Note: Files are kept for 30 days.</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <h5 class="profile-works__footer-text ui heading size-headingxs">All rights saved to @intellMed Extractor</h5>
+          <h3 class="profile-works__footer-text ui heading size-headingxs">All rights saved to @intellMed Extractor</h3>
         </div>
       </div>
     </div>
