--- a/ProfileWorks.html
+++ b/ProfileWorks.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>File History - Review Your Past File Records</title>
+    <title>User Profile - Manage Personal Information and Works</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Browse your previous file records with no files currently available. Remember, files are kept for 30 days for your convenience and security."
+      content="Access and update your personal information, view previous works, and manage your account settings. Keep your professional profile up-to-date with ease."
     />
     <img
       alt="Logo"
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
   </head>
   <body>
-    <!-- main layout section -->
+    <!-- main container section -->
     <div class="profileworks">
       <div class="profile-works container-md">
         <!-- footer section -->
@@ -57,48 +57,79 @@
                     </div>
                   </div>
                 </div>
-                <a href="Technical.html">
-                  <img src="public/images/img_group.svg" alt="Group" class="header__banner" />
+                <a href="Technical.html" target="_blank">
+                  <img src="public/images/img_group_cyan_400_01.svg" alt="Group" class="header__banner" />
                 </a>
               </header>
 
-              <!-- content section -->
+              <!-- profile section -->
               <div class="sidebar__main">
-                <img src="public/images/img_group_65_white_a700_01.svg" alt="Group 65" class="sidebar__avatar" />
-                <div class="main__details">
-                  <div class="details__personal">
+                <img src="public/images/img_group_65.svg" alt="Group 65" class="sidebar__avatar" />
+                <div class="sidebar__info">
+                  <div class="info__navigation">
                     <img
-                      src="public/images/img_hugeicons_co_present_light_blue_900.svg"
+                      src="public/images/img_hugeicons_co_present.svg"
                       alt="Hugeicons Co Present"
-                      class="personal__icon"
+                      class="navigation__icon"
                     />
-                    <div class="personal__actions">
-                      <div class="actions__title">
-                        <button class="title__text ui heading size-heading2xl"
-                        onclick="window.open('ProfileWorks.html', '_blank')">Personal information</button>
-                      </div>
-                      <button class="actions__button--previous-works ui button blue_gray_500 size-3xl fill"
-                      onclick="window.open('ProfileWorksOne.html', '_blank')">
+                    <div class="navigation__buttons">
+                      <button class="button--personal ui button blue_gray_500 size-3xl fill"
+                      onclick="window.open('ProfileWorks.html', '_blank')">
+                        Personal information
+                      </button>
+                      <button
+                        class="button--works ui button blue_gray_500 size-3xl fill"
+                        onclick="window.open('ProfileWorksOne.html', '_blank')"
+                      >
                         Previous works
                       </button>
-                      <button class="actions__button--previous-works ui button blue_gray_500 size-3xl fill"
-                      onclick="window.open('ProfileWorksTwo1.html', '_blank')">
+                      <button
+                        class="button--works ui button blue_gray_500 size-3xl fill"
+                        onclick="window.open('ProfileWorksTwo1.html', '_blank')"
+                      >
                         Log out
                       </button>
                     </div>
                   </div>
-                  <div class="details__records">
-                    <h2 class="content__welcome-text ui heading size-text2xl">Previous file record</h2>
-                    <div class="records__note-container">
-                      <p class="note-container__text ui text size-textmd">There are no files</p>
+                  <div class="info__details">
+                    <div class="details__name">
+                      <h1 class="name__label ui heading size-textxl">Name:</h1>
+                      <label class="name__input ui input white_a700_fc size-xs fill">
+                        <input name="Rectangle 56" type="text" />
+                      </label>
                     </div>
-                    <p class="records__note ui text size-textlg">Note: Files are kept for 30 days.</p>
+                    <div class="details__id">
+                      <h2 class="content__welcome-text ui heading size-textxl">ID:</h2>
+                      <label class="name__input ui input white_a700_fc size-xs fill">
+                        <input name="Rectangle 56" type="text" />
+                      </label>
+                    </div>
+                    <div class="details__id">
+                      <h3 class="content__welcome-text ui heading size-textxl">Email:</h3>
+                      <label class="email__input ui input white_a700_fc size-xs fill">
+                        <input name="Rectangle 56" type="text" />
+                      </label>
+                    </div>
+                    <div class="details__password">
+                      <h4 class="content__welcome-text ui heading size-textxl">Password:</h4>
+                      <label class="password__input ui input white_a700_fc size-xs fill">
+                        <input name="Rectangle 56" type="text" />
+                      </label>
+                    </div>
+                    <button class="info__save-button ui button teal_900 size-lg fill round">
+                      <img
+                        src="public/images/img_hugeiconssystemupdate01.svg"
+                        alt="Hugeicons:system-update-01"
+                        class="hugeiconssystem-update-01"
+                      />
+                      <span> Save changes</span>
+                    </button>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <h3 class="profile-works__footer-text ui heading size-headingxs">All rights saved to @intellMed Extractor</h3>
+          <h5 class="profile-works__footer-text ui heading size-headingxs">All rights saved to @intellMed Extractor</h5>
         </div>
       </div>
     </div>
